correction de bugs d'affichage : * logos académiques l'un sur l'autre -> inline * z-index des bandeaux des noisettes en admin remis à 0
git-svn-id: svn://zone.spip.org/spip-zone/_squelettes_@86456 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/galaxie_melusine/melusine/trunk/css/admin_melusine.css
+++ b/galaxie_melusine/melusine/trunk/css/admin_melusine.css
@@ -120,7 +120,7 @@
 .zbloc .formulaire_deplacer_module
 {
 position:relative;
-z-index:300;
+z-index:0;
 top:0px;
 height:50px;
 width:100%;
@@ -173,7 +173,7 @@ left:0px;
     background: green /*#27AE60*/;
     position: relative;
     /*top: -24px;*/
-    z-index:0;
+    z-index:200;
     color:white;
     /*width: 12em;*/
     font-weight: bold;
@@ -183,6 +183,8 @@ left:0px;
 .zbloc.admin_melusine .top
 {
 	background-image: linear-gradient(180deg, green, #f0f0f0);
+    z-index:200;
+
 }
 
 /* Les actions: uniformiser, etc... passent au vert */
